samples/_failures_safe/1761417717_9612c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f83e5ec7.c: In function ‘main’:
./samples/SAFE/__tmp_f83e5ec7.c:133:5: error: expected identifier or ‘(’ at end of input
  133 |     Matrix A, B,
      |     ^~~~~~
./samples/SAFE/__tmp_f83e5ec7.c:133:5: error: expected declaration or statement at end of input
